--- a/milestones/1_network_properties.ipynb
+++ b/milestones/1_network_properties.ipynb
@@ -14,9 +14,9 @@
    "source": [
     "## Students\n",
     "\n",
-    "* Team: `<your team number>`\n",
-    "* Students: `<the name of all students in the team>`\n",
-    "* Dataset: `<the dataset you used to complete the milestone>`"
+    "* Team: 34\n",
+    "* Students: Valentin Morel, Charles Coen, Xavier Sieber, Cédric Schumacher\n",
+    "* Dataset: Terrorist attacks"
    ]
   },
   {
@@ -613,7 +613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
