--- a/milestones/1_network_properties.ipynb
+++ b/milestones/1_network_properties.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "* Team: `<34>`\n",
     "* Students: `<the name of all students in the team>`\n",
-    "* Dataset: `<the dataset you used to complete the milestone>`"
+    "* Dataset: `<TerrorAttack.tgz TerroristRel.tgz>`"
    ]
   },
   {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,13 +88,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-c2091a97f2a1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Your code here.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mfeatures\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Data/TerrorAttack.tgz'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;31m# the pandas dataframe with the features and labels\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Your code here.\n",
     " \n",
-    "features = # the pandas dataframe with the features and labels"
+    "features = pd.read_csv('Data/TerrorAttack.tgz')# the pandas dataframe with the features and labels"
    ]
   },
   {
